# discocan

./: .gitignore  README.md
client/: .gitignore  README.md  hatch_build.py  pyproject.toml
client/discocan/: __init__.py  __main__.py  cli.py  config.py  device.py  event_bus.py  protocol.py  punchpress_auto.py  serial_port.py  store.py  thermo.py
client/discocan/server/: app.py
client/discocan/server/routes/: can.py  punchpress.py  thermo.py
client/discocan/tui/: app.py  messages.py
client/discocan/tui/layouts/: can_trace.py  punchpress.py  thermometer.py  trace_panel.py
client/web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
client/web/src/: api.ts  main.ts  ws.ts
client/web/src/components/: can-trace.ts  connection-status.ts  punchpress.ts  thermometer.ts
firmware/: .gitignore  .mxproject  CMakeLists.txt  LICENSE  discocan.ioc
firmware/Core/Inc/: main.h  packet_handler.h  protocol.h  punchpress_sim.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
firmware/Core/Src/: main.c  packet_handler.c  punchpress_sim.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
firmware/USB_DEVICE/App/: usbd_cdc_if.c  usbd_cdc_if.h  usbd_desc.c
firmware/cmake/stm32cubemx/: CMakeLists.txt
