[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "discocan"
version = "0.1.0"
description = "USB-CAN adapter monitor with TUI, web dashboard, and REST/WS server"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Tomáš Bureš", email = "tomas.bures@matfyz.cuni.cz" },
]
keywords = ["can", "can-bus", "usb-can", "stm32", "embedded", "monitor", "tui", "education"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Console :: Curses",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
    "Topic :: Scientific/Engineering",
    "Topic :: System :: Hardware",
    "Topic :: Terminals",
]
dependencies = [
    "pyserial>=3.5",
    "crcmod>=1.7",
    "textual>=0.80",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "typer>=0.12",
    "httpx>=0.27",
    "websockets>=13",
    "wsproto>=1.2",
    "rich>=13",
]

# [project.urls]
# Homepage = "https://github.com/<user>/<repo>"
# Source = "https://github.com/<user>/<repo>"
# Issues = "https://github.com/<user>/<repo>/issues"

[project.scripts]
discocan = "discocan.cli:app"

# ── Build configuration ─────────────────────────────────────────────────────

# `discocan/server/static/` is gitignored (it's the Vite build output) but we
# still need it inside the wheel — `artifacts` overrides VCS exclusion.
[tool.hatch.build.targets.wheel]
packages = ["discocan"]
artifacts = [
    "discocan/server/static/**",
]

# Run the npm build before the wheel is assembled so the wheel ships with
# the compiled frontend. The hook is implemented in hatch_build.py.
[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"

# Sdist: ship the Python source plus the web sources so a downstream rebuild
# is possible. Keep node_modules and other build detritus out (those are
# already gitignored, so respecting VCS gives us the right behaviour).
[tool.hatch.build.targets.sdist]
include = [
    "/discocan",
    "/web",
    "/hatch_build.py",
    "/README.md",
    "/pyproject.toml",
]
